--- a/.github/workflows/daily-readme-update.yml
+++ b/.github/workflows/daily-readme-update.yml
@@ -1,8 +1,11 @@
 name: Daily README Update
 
 on:
+  push:
+      branches:
+        - main
   schedule:
-    - cron: '09 17 * * *' 
+    - cron: '12 17 * * *' 
 
 jobs:
   update-readme:
